--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,6 @@ ipykernel==6.21.3
 xgboost==1.7.5
 dill==0.3.6
 flask==2.2.3
-flask_cors==3.1.0
+#flask_cors==3.1.0
 lime==0.2.0.1
 setuptools==65.5.0
