--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,9 @@ matplotlib==3.6.3
 seaborn==0.12.2
 scikit-learn==1.2.2
 ipykernel==6.21.3
-#catboost==1.1.0
+catboost==1.2.1
 xgboost==1.7.5
 dill==0.3.6
-flask==2.2.3
+#flask==2.2.3
 #flask_cors==3.1.0
 lime==0.2.0.1
-setuptools==65.5.0
